# llm-projects

./: README.md
conversationalist-file-search/: README.md  config.py  file_indexer.py  llm_interface.py  main.py  requirements.txt  retriever.py  text_extractor.py
conversationalist-file-search/aa_interface/: llm_interface.py
conversationalist-file-search/data_read/: file_indexer.py  retriever.py  text_extractor.py
conversationalist-file-search/test_scripts/: test_extractor_script.py
conversationalist-file-search/test_scripts/test_files/: eor-f2024.txt
llm-ros-interactions/: README.md  text_summarizer.py  transfer_to_construct.tar
llm-ros-interactions/ros2_ws/: python_files.tar
llm-ros-interactions/ros2_ws/install/basic_comm/lib/basic_comm/: listener  talker
llm-ros-interactions/ros2_ws/install/basic_comm/share/basic_comm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
llm-ros-interactions/ros2_ws/install/gemini_ros2_interface/lib/gemini_ros2_interface/: command_input_node  gemini_processor_node
llm-ros-interactions/ros2_ws/src/: package.xml  setup.py
llm-ros-interactions/ros2_ws/src/basic_comm/: CMakeLists.txt  package.xml
llm-ros-interactions/ros2_ws/src/basic_comm/src/: listener.cpp  talker.cpp
llm-ros-interactions/ros2_ws/src/gemini_ros2_interface/: command_input_node.py  setup.cfg  setup.py  text_summarizer.py
sound-device-project/: README.md
sound-device-project/cli/: main.py
sound-device-project/sd/: main.py
sound-device-project/src/: main.py
(+6 files in other folders)
